objects/ACCObj1234__c.object
<CustomObject>
    <description>fdsfdsfxcvcx</description>
    <fields>
        <fullName>Field56__c</fullName>
        <label>Field56</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TestFeidl1234__c</fullName>
        <label>TestFeidl1234</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TestField3456__c</fullName>
        <label>TestField3456</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ACCObj1234</label>
    <nameField>
        <label>ACCObj1234 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACCObj1234s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>